[package]
name = "litmus_test_web"
version = "0.1.0"
edition = "2021"

[dependencies]
cfg-if = "1"
console_log = "0.2.0"
log = "0.4.17"
tracing = "0.1.36"
tracing-subscriber = { version = "0.3.15", features = ["time"] }
wgpu = "0.19.3"
winit = "0.27.2"
pollster = "0.3"
bytemuck = { version = "1.14", features = ["derive"] }
image = { version = "0.24.3", default-features = false, features = ["png", "jpeg"] }
anyhow = "1.0.64"
cgmath = "0.18.0"
env_logger = "0.11.3"
wgpu-core = "0.19.3"
wgpu_macros = "0.1.0"
wgpu-types = "0.19.2"
flume = "0.11.0"
wasm-bindgen = "0.2"
wgpu-hal = "0.19.3"
naga = "0.19.2"
env = "0.0.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "0.2.0"
tracing-wasm = "0.2.1"
wgpu = { version = "0.13.1", features = ["webgl"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = ["Document", "Window", "Element"] }

[features]

